--- a/index.html
+++ b/index.html
@@ -3,10 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Red40</title>
 </head>
 <body>
-    <h1>Very Cool Title</h1>
-    <p>stinky ipsum dolor sit amet consectetur, adipisicing elit. Est corrupti officiis quibusdam praesentium dignissimos odit ea obcaecati, unde alias, laborum error ex eaque natus aliquam explicabo repudiandae placeat, similique saepe.</p>
+    <h1>Red40</h1>
+    <pre>
+<p>Drinks</p>
+        <select name="drinks" id="drinks">
+<option value="blank"></option>
+<option value="cola">Coca Cola</option>
+<option value="dr-pepper">Dr. Pepper</option>
+<option value="seven-up">Cherry Seven Up</option>
+<option value="gatorade">Gatorade</option>
+<option value="hawaiian-punch">Hawaiian Punch</option>
+<option value="pepsi">Pepsi</option>
+<option value="mountain-dew">Mountain Dew</option>
+<option value="veight">V8</option>
+<option value="minute-maid">Minute Maid Fruit Punch</option>
+<option value="sunkist">Sunkist</option>
+<option value="hi-c">Hi-C</option>
+<option value="tang">Tang</option>
+<option value="kool-aid">Kool-Aid</option>
+<option value="nestle">Nestle Quick Strawberry</option>
+<option value="lipton">Lipton</option>
+<option value="ocean-spray">Ocean Spray</option>
+<option value="tropicana">Tropicana Twister</option>
+<option value="fruitworks">FruitWorks</option>
+
+        </select>
+
+    </pre>
+
 </body>
 </html>
