--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 </head>
 <body>
     <h1>Red40</h1>
-    <pre>
-<p>Drinks</p>
+    <label for="drinks">Drinks:</label>
         <select name="drinks" id="drinks">
 <option value="blank"></option>
 <option value="cola">Coca Cola</option>
@@ -29,10 +28,35 @@
 <option value="ocean-spray">Ocean Spray</option>
 <option value="tropicana">Tropicana Twister</option>
 <option value="fruitworks">FruitWorks</option>
-
         </select>
 
-    </pre>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<label for="food">Foods:</label>
+<select name="food" id="foods">
+<option value="blank"></option>
 
+</select>
+
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<label for="snacks">Snacks:</label>
+<select name="snacks" id="snacks">
+<option value="blank"></option>
+
+</select>
+
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<label for="sauces">Sauces:</label>
+<select name="sauces" id="sauces">
+<option value="blank"></option>
+
+</select>
+
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<label for="candy">Candy:</label>
+<select name="candy" id="candy">
+<option value="blank"></option>
+
+</select>
 </body>
+
 </html>
