drinks, snacks, & candy
I put more drinks in the list.
I put the snacks and candy

--- a/index.html
+++ b/index.html
@@ -11,23 +11,105 @@
         <select name="drinks" id="drinks">
 <option value="blank"></option>
 <option value="cola">Coca Cola</option>
-<option value="dr-pepper">Dr. Pepper</option>
-<option value="seven-up">Cherry Seven Up</option>
-<option value="gatorade">Gatorade</option>
-<option value="hawaiian-punch">Hawaiian Punch</option>
-<option value="pepsi">Pepsi</option>
-<option value="mountain-dew">Mountain Dew</option>
-<option value="veight">V8</option>
+<option> Hi-C Boppin Berry </option>
+<option> Hi-C Fruit Punch </option>
+<option> Minute Maid Orange Soda </option>
+<option> Minute Maid Fruit Punch </option>
+<option> Minute Maid Strawberry Lemonade</option>
+<option value="dr-pepper">Dr. Pepper</option> 
+<option> Schweppes Grape Ginger Ale</option>
+<option> Schweppes Grape Diet Ginger Ale</option>
+<option> Schweppes Raspberry Ginger Ale </option> 
+<option> Schweppes Raspberry Diet Giner Ale </option>
+<option> Sunkist Orange </option>
+<option> Sunkist Orange Zero Sugar </option>
+<option> Sunkist Watermelon </option>
+<option> Sunkist Cherry Limeade</option>
+<option> Sunkist Grape</option>
+<option> Sunkist Strawberry</option>
+<option> Sunkist Peach</option>
+<option value="seven-up">Seven Up Cherry </option>
+<option> Seven Up Cherry Zero Sugar </option>
+<option value="gatorade">Gatorade Fruit Punch </option>
+<option> Gatorade Strawberry </option> 
+<option> Gatorade Strawberry Lemonade </option>
+<option> Gatorade Strawberry Kiwi </option>
+<option> Gatorade Strawberry Watermelon </option>
+<option> Gatorade Watermelon Citrus </option>
+<option> Gatorade Frost Riptide Rush </option>
+<option> Gatorade Frost Rain Berry </option>
+<option> Gatorade Frost Kiwi Strawberry </option>
+<option> Gatorade Frost Orange Strawberry </option>
+<option> Gatorade Frost Summit Storm </option>
+<option> Gatorade Fierce Strawberry </option> 
+<option> Gatorade Fierce Fruit Punch & Berry </option>
+<option> Gatorade Flow Blackberry Wave </option>
+<option> Gatorade Flow Strawberry Splash </option>
+<option> Gatorade Flow Watermelon Mist </option>
+<option> Gatorade Passion Fruit </option>
+<option> Gatorade The Edge Fruit Punch  </option>
+<option> Gatorade Gatorlyte Kiwi Strawberry </option>
+<option> Gatorade Powder Gatorlyte Watermelon </option>
+<option> Gatorade Powder Thirst Quencher Fruit Punch </option>
+<option> Gatorade Powder Thirst Quencher Riptide Rush </option>
+<option value="hawaiian-punch">Hawaiian Punch Fruit Juicy Red </option>
+<option> Hawaiian Punch Strawberry Banana </option>
+<option> Hawaiian Punch Cowabunga Grape </option>
+<option> Hawaiian Punch Berry Squeeze  </option>
+<option> Hawaiian Punch Watermelon Berry Boom </option>
+<option> Hawaiian Punch Strawberry Citrus </option>
+<option value="pepsi">Pepsi Blue</option>
+<option value="mountain-dew">Mountain Dew Code Red </option>
+<option> Mountain Dew Diet Code Red </option>
+<option value="veight">V8 + Energy</option>
 <option value="minute-maid">Minute Maid Fruit Punch</option>
-<option value="sunkist">Sunkist</option>
-<option value="hi-c">Hi-C</option>
-<option value="tang">Tang</option>
-<option value="kool-aid">Kool-Aid</option>
+<option value="tang">Tang Strawberry </option>
+<option> Tang Fruit Frenzy  </option>
+<option value="kool-aid">Kool-Aid Jammers Cherry </option>
+<option> Kool-Aid Jammers Cherry Limeade</option>
+<option> Kool-Aid Jammers Watermelon</option>
+<option> Kool-Aid Jammers Strawberry Kiwi </option>
+<option> Kool-Aid Jammers Sharkleberry Fin</option>
+<option> Kool-Aid Jammers Berry Splash</option>
+<option> Kool-Aid Jammers Tropical Punch Zero Sugar </option>
+<option> Kool-Aid Bursts Soft Drink Cherry </option>
+<option> Kool-Aid Soft DrinkCherry Limeade </option>
+<option> Kool-Aid Soft Drink Grape </option>
+<option> Kool-Aid Bursts Ready-To-Drink Juice Cherry </option>
+<option> Kool-Aid Bursts Ready-To-Drinky Juice Tropical </option>
+<option> Kool-Aid Bursts Tropical Punch Zero Sugar </option>
+<option> Kool-Aid Powder Tropical Punch</option>
+<option> Kool-Aid Powder Cherry </option>
+<option> Kool-Aid Powder Black Cherry </option>
+<option> Kool-Aid Powder Berry Cherry</option>
+<option> Kool-Aid Powder Grape</option>
+<option> Kool-Aid Powder Pink Lemonade</option>
+<option> Kool-Aid Powder Sharkleberry Fin</option>
+<option> Kool-Aid Powder Strawberry</option>
+<option> Kool-Aid Powder Strawberry Kiwi</option>
+<option> Kool-Aid Powder Strawberry Lemonade </option>
+<option> Kool-Aid Powder Orange</option>
+<option> Kool-Aid Powder Cherry Zero Sugar </option>
+<option> Kool-Aid Powder Grape Zero Sugar </option>
+<option> Kool-Aid Liquids Cherry </option>
+<option> Kool-Aid Liquids Strawberry</option>
+<option> Kool-Aid Liquids Grape </option>
+<option> Kool-Aid Liquids Sharkleberry Fin </option>
+<option> Kool-Aid Liquid Orange </option>
+<option> Kool-Aid Jello Cups </option>
+<option> Kool-Aid Jello Cups Zero Sugar </option>
 <option value="nestle">Nestle Quick Strawberry</option>
-<option value="lipton">Lipton</option>
-<option value="ocean-spray">Ocean Spray</option>
-<option value="tropicana">Tropicana Twister</option>
-<option value="fruitworks">FruitWorks</option>
+<option value="lipton">Lipton Raspberry ice Tea</option>
+<option> Brisk Ice Tea </option>
+<option value="ocean-spray">Ocean Spray Grapefruit Juice</option>
+<option> Ocean Spray Grapefruit & Tangerine Juice </option>
+<option value="tropicana">Tropicana Twister Orange</option>
+<option> Tropicana Twister Cranberry </option>
+<option value="fruitworks">FruitWorks Apple Raspberry </option>
+<option> FruitWorks Peach Papaya </option>
+<option> FruitWorks Pink Lemonade </option>
+<option> FruitWorks Strawberry Melon </option>
+<option> FruitWorks Tangerine Citrus</option>
         </select>
 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -41,6 +123,59 @@
 <label for="snacks">Snacks:</label>
 <select name="snacks" id="snacks">
 <option value="blank"></option>
+<option> Doritos Nacho Cheese</option>
+<option> Doritos Spicy Nacho </option>
+<option> Doritos BBQ </option>
+<option> Doritos Flamin' Hot Nacho</option>
+<option> Doritos Flamin' Hot Limon </option>
+<option> Doritos Flamin' Hot Cool Ranch </option>
+<option> Doritos Flamas </option>
+<option> Doritos Tapatio </option>
+<option> Doritos mini Nacho Cheese</option>
+<option> Doritos Dinamita Flamin' Hot </option>
+<option> Doritos Dinamita Chile Limon </option>
+<option> Doritos Dinamita Sticks Tangy Fiery Lime </option>
+<option> Doritos Dinamita Sticks Smoky Chile Queso </option>
+<option> Takis Fuego </option>
+<option> Takis Dragon Sweet Chili </option>
+<option> Takis Kaboom</option>
+<option> Takis Hot Nuts Fuego </option>
+<option> Takis Hot Nuts Flare </option>
+<option> Cheetos Crunchy Flamin' Hot</option>
+<option> Cheetos Crunchy XXtra Flamin' Hot</option>
+<option> Cheetos Crunchy Flamin' Hot Limon </option>
+<option> Cheetos Crunchy Flamin' Hot Tangy Chili Fusion </option>
+<option> Cheetos Crunchy Cheddar Cheese Jalapeno </option>
+<option> Cheetos Crunchy Buffalo </option>
+<option> Cheetos Bolitas Cheese</option>
+<option> Cheetos Popcorn Flamin' Hot </option>
+<option> Cheetos Popcorn Cheddar Jalapeno</option>
+<option> Cheetos Puffs Flamin' Hot</option>
+<option> Cheetos Pretzels Flamin' Hot </option>
+<option> Cheetos Mac 'N Cheese Flamin' Hot </option>
+<option> Cheetos Mac 'N Cheese Cheesy Jalapeno</option>
+<option> Cheetos Fantastix Flamin' Hot </option>
+<option> Cheetos Baked Crunchy Flamin' Hot</option>
+<option> Welch's Fruit Snacks Mixed Fruit </option>
+<option> Welch's Fruit Snacks Summer Fruits </option>
+<option> Welch's Fruit Snacks Berries 'n Cherries </option>
+<option> Welch's Fruit Snacks Island Fruits </option>
+<option> Welch's Fruit Snacks Superfruit Mix </option>
+<option> Welch's Fruit Snacks Strawberry </option>
+<option> Welch's Fruit Snacks Fruit Punch </option>
+<option> Welch's Fruit Snacks Grape </option>
+<option> Welch's Fruit Snacks Mixed Fruit Reduced Sugar </option>
+<option> Hi-C Fruit Snacks  </option>
+<option> Altoids Cinnamon </option>
+<option> Bubblicious Strawberry </option>
+<option> Bubblicious Watermelon </option>
+<option> Bubbaloo Tutti Fruiti </option>
+<option> Trident Bubblegum </option>
+<option> Trident Cinnamon</option>
+<option> Trident Watermelon </option>
+<option> Trident Berry Lime </option>
+<option> Trident for Kids Sour Patch Redberry</option>
+<option> Trident for Kids Sour Patch Watermelon </option>
 
 </select>
 
@@ -55,6 +190,118 @@
 <label for="candy">Candy:</label>
 <select name="candy" id="candy">
 <option value="blank"></option>
+<option value="Skittles">Skittles Original Fruity</option>
+<option> Skittles Wild Berry </option>
+<option> Skittles Sour </option>
+<option> Skittles Gummies </option>
+<option> Skittles Brightside</option>
+<option> Skittles Flavor Mash-Ups</option>
+<option> Skittles Littles</option>
+<option> Skittles Smoothies </option>
+<option> Skittles Tropical</option>
+<option value="M&Ms">M&M's Classic </option>
+<option> M&M's Peanut Butter </option>
+<option> M&M's Mega </option>
+<option> M&M's Minis </option>
+<option> M&M's Chocolate Pumpkin Pie </option>
+<option> M&M's Chocolate Halloween </option>
+<option> M&M's Peanut</option>
+<option> M&M's Brownie Brittle </option>
+<option> Crunchy Cookie M&M's </option>
+<option> M&M's Dark Chocolate</option>
+<option> M&M's Almond</option> 
+<option> M&M's Caramel Cold Brew</option>
+<option> M&M's Caramel </option>
+<option> M&M's Pretzel </option>
+<option value="Starburst">Starburst Original Fruity</option>
+<option> Starburst Reds </option>
+<option> Starburst Fave Reds </option>
+<option> Starburst Sour Gummies </option> 
+<option> Starburst AllPink </option>
+<option> Starburst Swirlers </option>
+<option> Starburst </option>
+<option value="JollyRanchers">Jolly Rancher Orignial Hard Candy</option>
+<option> Jolly Rancher Fruity Swirls Hard Candy</option>
+<option> Jolly Rancher Tropical Hard Candy </option>
+<option> Jolly Rancher Fruit Bash Hard Candy </option>
+<option> Jolly Rancher Fruit 'N Sour </option>
+<option> Jolly Rancher Orignal Hard Candy Zero Sugar</option>
+<option> Jolly Rancher Tropical Hard Candy Zero Sugar</option>
+<option> Jolly Rancher Awesome Reds Hard Candy</option>
+<option> Jolly Rancher Original Chews</option>
+<option> Jolly Rancher Awesome Twosome Chews </option>
+<option> Jolly Rancher Lollipops</option>
+<option> Jolly Rancher Original Gummies </option>
+<option> Jolly Rancher Very Berry Gummies </option>
+<option> Jolly Rancher Sour Gummies </option> 
+<option> Jolly Rancher Sour Gummies Awesome Reds</option>
+<option> Jolly Rancher Misfit Gummies </option>
+<option> Jolly Rancher Sour Gummies Sour Lemonade</option>
+<option> Jolly Rancher Bites Filled Gummies</option>
+<option> Jolly Rancher Ropes Raspberry & Cherry</option> 
+<option> Jolly Rancher Ropes Watermelon & Green Apple</option>
+<option> Jolly Rancher Watermelon Bubble Gum</option>
+<option value="Twizzlers">Twizzlers Twists Black Licorice</option>
+<option> Twizzler Twists Strawberry</option>
+<option> Twizzler Twists Strawberry Zero Sugar </option>
+<option> Twizzler Twists Cherry </option>
+<option> Twizzler Twists Rainbow </option> 
+<option> Twizzler Twists Mystery </option>
+<option> Twizzler Filled Twists Pink Lemonade </option> 
+<option> Twizzler Filled Twists Tropical Blast </option>
+<option> Twizzler Filled Twists Sweet & Sour</option>
+<option> Twizzler Filled Twists Stawberry Smoothie</option>
+<option> Twizzler Nibs Cherry </option>
+<option> Twizzler Nibs Black Licorice</option>
+<option> Twizzler Bites Cherry </option> 
+<option> Twizzler Bites Watermelon </option>
+<option> Twizzler Filled Bites Strawberry</option>
+<option> Twizzler Filled Bites Sweet & Sour Cherry Kick Citrus Punch</option> 
+<option> Twizzler Ghost Cherry </option>
+<option> Twizzler Pull 'n' Peel Cherry </option>
+<option> Twizzler Pull 'n' Peel Watermelon </option>
+<option> Twizzler Pull 'n' Peel Fruit Punch</option>
+<option> Twizzler Gummies </option>
+<option> Dum Dum Pops Cherry </option> 
+<option> Dum Dum Pops Bubble Gum </option>
+<option> Dum Dum Pops Fruit Punch</option> 
+<option> Dum Dum Pops Watermelon </option>
+<option> Dum Dum Pops Strawberry</option>
+<option> Dum Dum Pops Mystery</option>
+<option> Hot Tamales Cinnamon</option>
+<option> Lifesavers Orignal Gummies </option> 
+<option> Lifesavers Collisions Gummies </option> 
+<option> Lifesavers Wild Berries Gummies </option> 
+<option> Lifesavers Neons Gummies </option>
+<option> Lifesavers Exotics Gummies </option> 
+<option> Lifesavers Sours Gummies </option>
+<option> Lifesavers Original Hard Candy </option>
+<option> Lifesavers Fruit Hard Candy </option>
+<option> Lifesavers Cherry Hard Candy </option>
+<option> Tootsie Roll Pops </option> 
+<option> Tootsie Pop Drops</option>
+<option> Tootsie Fruit Chew Pops </option> 
+<option> Smarties Original</option> 
+<option> Smarties Tropical</option>
+<option> Smarties Lollies</option>
+<option> Smarties Squashies</option>
+<option> Smarties X-treme Sour</option>
+<option> Smarties Love Hearts </option>
+<option> Smarties Money </option> 
+<option> Smarties Necklace & Bracelet</option>
+<option> Nerds Grape & Strawberry</option> 
+<option> Nerds Watermelon & Cherry </option>
+<option> Nerds Rainbow</option>
+<option> Nerds Big Chewy </option>
+<option> Nerds Gummy Clusters </option> 
+<option> Nerds Gummy Clusters Very Berry </option>
+<option> Nerds Rainbow Rope</option>
+<option> Nerds Very Berry Rope</option>
+<option> Nerds Tropical Rope</option>
+<option> Jiffy Peanut Butter Bars </option>
+<option> Sprinkles </option>
+<option> </option>
+
 
 </select>
 </body>
