--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
     <label for="drinks">Drinks:</label>
         <select name="drinks" id="drinks">
 <option value="blank"></option>
-<option value="cola">Coca Cola</option>
+<option>Coca Cola</option>
 <option> Hi-C Boppin Berry </option>
 <option> Hi-C Fruit Punch </option>
 <option> Minute Maid Orange Soda </option>
 <option> Minute Maid Fruit Punch </option>
 <option> Minute Maid Strawberry Lemonade</option>
-<option value="dr-pepper">Dr. Pepper</option> 
+<option> Dr. Pepper</option> 
 <option> Schweppes Grape Ginger Ale</option>
 <option> Schweppes Grape Diet Ginger Ale</option>
 <option> Schweppes Raspberry Ginger Ale </option> 
-<option> Schweppes Raspberry Diet Giner Ale </option>
+<option> Schweppes Raspberry Diet Ginger Ale </option>
 <option> Sunkist Orange </option>
 <option> Sunkist Orange Zero Sugar </option>
 <option> Sunkist Watermelon </option>
@@ -28,9 +28,9 @@
 <option> Sunkist Grape</option>
 <option> Sunkist Strawberry</option>
 <option> Sunkist Peach</option>
-<option value="seven-up">Seven Up Cherry </option>
+<option> Seven Up Cherry </option>
 <option> Seven Up Cherry Zero Sugar </option>
-<option value="gatorade">Gatorade Fruit Punch </option>
+<option> Gatorade Fruit Punch </option>
 <option> Gatorade Strawberry </option> 
 <option> Gatorade Strawberry Lemonade </option>
 <option> Gatorade Strawberry Kiwi </option>
@@ -52,20 +52,20 @@
 <option> Gatorade Powder Gatorlyte Watermelon </option>
 <option> Gatorade Powder Thirst Quencher Fruit Punch </option>
 <option> Gatorade Powder Thirst Quencher Riptide Rush </option>
-<option value="hawaiian-punch">Hawaiian Punch Fruit Juicy Red </option>
+<option> Hawaiian Punch Fruit Juicy Red </option>
 <option> Hawaiian Punch Strawberry Banana </option>
 <option> Hawaiian Punch Cowabunga Grape </option>
 <option> Hawaiian Punch Berry Squeeze  </option>
 <option> Hawaiian Punch Watermelon Berry Boom </option>
 <option> Hawaiian Punch Strawberry Citrus </option>
-<option value="pepsi">Pepsi Blue</option>
-<option value="mountain-dew">Mountain Dew Code Red </option>
+<option> Pepsi Blue</option>
+<option> Mountain Dew Code Red </option>
 <option> Mountain Dew Diet Code Red </option>
-<option value="veight">V8 + Energy</option>
-<option value="minute-maid">Minute Maid Fruit Punch</option>
-<option value="tang">Tang Strawberry </option>
+<option> V8 + Energy</option>
+<option> Minute Maid Fruit Punch</option>
+<option> Tang Strawberry </option>
 <option> Tang Fruit Frenzy  </option>
-<option value="kool-aid">Kool-Aid Jammers Cherry </option>
+<option> Kool-Aid Jammers Cherry </option>
 <option> Kool-Aid Jammers Cherry Limeade</option>
 <option> Kool-Aid Jammers Watermelon</option>
 <option> Kool-Aid Jammers Strawberry Kiwi </option>
@@ -98,14 +98,14 @@
 <option> Kool-Aid Liquid Orange </option>
 <option> Kool-Aid Jello Cups </option>
 <option> Kool-Aid Jello Cups Zero Sugar </option>
-<option value="nestle">Nestle Quick Strawberry</option>
-<option value="lipton">Lipton Raspberry ice Tea</option>
+<option> Nestle Quick Strawberry</option>
+<option> Lipton Raspberry ice Tea</option>
 <option> Brisk Ice Tea </option>
-<option value="ocean-spray">Ocean Spray Grapefruit Juice</option>
+<option> Ocean Spray Grapefruit Juice</option>
 <option> Ocean Spray Grapefruit & Tangerine Juice </option>
-<option value="tropicana">Tropicana Twister Orange</option>
+<option> Tropicana Twister Orange</option>
 <option> Tropicana Twister Cranberry </option>
-<option value="fruitworks">FruitWorks Apple Raspberry </option>
+<option> FruitWorks Apple Raspberry </option>
 <option> FruitWorks Peach Papaya </option>
 <option> FruitWorks Pink Lemonade </option>
 <option> FruitWorks Strawberry Melon </option>
@@ -116,7 +116,29 @@
 <label for="food">Foods:</label>
 <select name="food" id="foods">
 <option value="blank"></option>
-
+<option> Del Monte Fruit Salad</option>
+<option> Hamburger Helper Lasagna</option>
+<option> Kix Berry Berry</option>
+<option> Lucky Charms</option>
+<option> Reese's Peanut Butter Puffs</option>
+<option> Trix</option>
+<option> Froot Loops</option>
+<option> Hunny B's</option>
+<option> Mickey Magix</option>
+<option> Fruity Pebbles</option>
+<option> Honey Bunches of Oats with Strawberry</option>
+<option> Cap'n Crunchberries</option>
+<option> Cap'n Crunch Choco Donuts</option>
+<option> Fruitangy O's</option>
+<option> Archway Cookies Raspberry Filled</option>
+<option> Firecracker Pops</option>
+<option> Scribblers</option>
+<option> Welch's Frozen Fruit Juice Bars</option>
+<option> Twinkies</option>
+<option> Otter Pops</option>
+<option> Nutri-Grain Cereal Bar Mixed Berry</option>
+<option> Nutri-Grain Cereal Bar Raspberry</option>
+<option> Nutri-Grain Cereal Bar Strawberry</option>
 </select>
 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
