sauce and snack list
I added a few more to the snack list.
Put some on the sauce list.

--- a/index.html
+++ b/index.html
@@ -96,8 +96,6 @@
 <option> Kool-Aid Liquids Grape </option>
 <option> Kool-Aid Liquids Sharkleberry Fin </option>
 <option> Kool-Aid Liquid Orange </option>
-<option> Kool-Aid Jello Cups </option>
-<option> Kool-Aid Jello Cups Zero Sugar </option>
 <option value="nestle">Nestle Quick Strawberry</option>
 <option value="lipton">Lipton Raspberry ice Tea</option>
 <option> Brisk Ice Tea </option>
@@ -116,6 +114,8 @@
 <label for="food">Foods:</label>
 <select name="food" id="foods">
 <option value="blank"></option>
+<option> Kool-Aid Jello Cups </option>
+<option> Kool-Aid Jello Cups Zero Sugar </option>
 
 </select>
 
@@ -183,6 +183,31 @@
 <label for="sauces">Sauces:</label>
 <select name="sauces" id="sauces">
 <option value="blank"></option>
+<option> Wyler's Beef Bouillon Cubes</option>
+<option> Signature Select Beef Bouillon Cubes</option>
+<option> Most Beef Bouillion</option>
+<option> Open Pit Original BBQ </option>
+<option> Open Pit Honey BBQ </option>
+<option> Open Pit Hickory BBQ </option>
+<option> Open Pit Thick & Tangy Original </option>
+<option> Most BBQ Sauces</option>
+<option> Fuddruckers Peppered Peanut Sauce </option>
+<option> Fuddruckers Horseradish Red Sauce </option>
+<option> Kraft Char-Grill </option>
+<option> Kraft Hickory Flavor </option>
+<option> Kraft Hickory Smoke </option>
+<option> Kraft Honey </option>
+<option> Kraft Honey Hickory </option>
+<option> Kraft Honey Roasted Garlic </option>
+<option> Kraft Mesquite </option>
+<option> Kraft Onion Bits </option>
+<option> Kraft Original </option>
+<option> Kraft Roasted Garlic </option>
+<option> Kraft Slow Simmered Hot </option>
+<option> Kraft Spicy Cajun </option>
+<option> Kraft Spicy Honey </option>
+<option> Kraft Sweet Hickory Smoke Molasses </option>
+<option> </option>
 
 </select>
 
@@ -299,7 +324,18 @@
 <option> Nerds Very Berry Rope</option>
 <option> Nerds Tropical Rope</option>
 <option> Jiffy Peanut Butter Bars </option>
-<option> Sprinkles </option>
+<option> Pillsbury Funfetti Sprinkles </option>
+<option> Pillsbury Funfetti Frosting Bold Purple Vanilla  </option>
+<option> Pillsbury Funfetti Strawberry Cake & Cupcake Mix </option>
+<option> Pillsbury Funfetti Unicorn Pink Vanilla Cake Donut </option>
+<option> Pillsbury Pumpkin Quick Bread & Muffin Mix </option>
+<option> Pillsbury Perfectly Pumpkin Cookie Mix </option>
+<option> Pillsbury The Elf on the Shelf Sugar Cookie with Candy Canes </option>
+<option> Pillsbury Crescent Rolls Dough </option> 
+<option> Pillsbury Supreme Frosting Strawberry</option>
+<option> Pillsbury </option>
+<option> Candy Canes </option> 
+
 <option> </option>
 
 
