OMG FIGURED IT OUTTT

--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Red40</title>
 </head>
-<body>
     <h1>Red40</h1>
-    <label for="drinks">Drinks:</label>
+
+<main style="display: grid; column-gap: 20px; grid-auto-flow: column;">
+     <label for="drinks">Drinks:</label>
         <select name="drinks" id="drinks">
 <option value="blank"></option>
 <option>Coca Cola</option>
@@ -110,7 +111,7 @@
 <option> FruitWorks Tangerine Citrus</option>
         </select>
 
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<!-- &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -->
 <label for="food">Foods:</label>
 <select name="food" id="foods">
 <option value="blank"></option>
@@ -139,7 +140,7 @@
 <option> Nutri-Grain Cereal Bar Strawberry</option>
 </select>
 
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<!-- &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -->
 <label for="snacks">Snacks:</label>
 <select name="snacks" id="snacks">
 <option value="blank"></option>
@@ -196,10 +197,9 @@
 <option> Trident Berry Lime </option>
 <option> Trident for Kids Sour Patch Redberry</option>
 <option> Trident for Kids Sour Patch Watermelon </option>
-
 </select>
 
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<!-- &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -->
 <label for="sauces">Sauces:</label>
 <select name="sauces" id="sauces">
 <option value="blank"></option>
@@ -228,10 +228,9 @@
 <option> Kraft Spicy Honey </option>
 <option> Kraft Sweet Hickory Smoke Molasses </option>
 <option> </option>
-
 </select>
 
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<!-- &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -->
 <label for="candy">Candy:</label>
 <select name="candy" id="candy">
 <option value="blank"></option>
@@ -265,7 +264,7 @@
 <option> Starburst AllPink </option>
 <option> Starburst Swirlers </option>
 <option> Starburst </option>
-<option value="JollyRanchers">Jolly Rancher Orignial Hard Candy</option>
+<option> Jolly Rancher Orignial Hard Candy</option>
 <option> Jolly Rancher Fruity Swirls Hard Candy</option>
 <option> Jolly Rancher Tropical Hard Candy </option>
 <option> Jolly Rancher Fruit Bash Hard Candy </option>
@@ -355,11 +354,13 @@
 <option> Pillsbury Supreme Frosting Strawberry</option>
 <option> Pillsbury </option>
 <option> Candy Canes </option> 
-
-<option> </option>
-
-
 </select>
-</body>
+</main>
+
+<footer>
+    <pre>
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                    .
+    </pre>
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                </footer>
 
 </html>
