--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Red40</title>
 </head>
-    <h1>Red40</h1>
+
+    <h1><font color ="dd1923">Products with Red 40</font></h1>
 
 <main style="display: grid; column-gap: 20px; grid-auto-flow: column;">
      <label for="drinks">Drinks:</label>
