Added Medicine and Cosmetics Tables

--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
 <option> Nutri-Grain Cereal Bar Mixed Berry</option>
 <option> Nutri-Grain Cereal Bar Raspberry</option>
 <option> Nutri-Grain Cereal Bar Strawberry</option>
+<option> Kraft Macaroni and Cheese</option>
 </select>
 
 <!-- &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -->
@@ -356,6 +357,104 @@
 <option> Pillsbury </option>
 <option> Candy Canes </option> 
 </select>
+<label for="medicine">Medicine:</label>
+<select name="medicine" id="medicine">
+<option value="blank"></option>
+<option> Alka-Seltzer Plus Cold & Sinus Softgels</option>
+<option> Alka-Seltzer Plus Cold Cherry Effervescent Tablets</option>
+<option> Alka-Seltzer Plus Flu Honey Orange Effervescent Tablets</option>
+<option> Alka-Seltzer Plus Nose & Throat Effervescent Tablets</option>
+<option> Alka-Seltzer Gas Relief Liquid Softgels</option>
+<option> Comtrex Acute Head Cold Caplets</option>
+<option> Comtrex Day & Night Cold & Cough Caplets Day</option>
+<option> Comtrex Day & Night Flu Therapy Caplets Day and Night</option>
+<option> Comtrex Non Drowsy Cold & Cough Caplets</option>
+<option> Children's Motrin Cold Liquid Berry</option>
+<option> Children's Motrin Cold Liquid Grape</option>
+<option> Children's Tylenol Cold Liquid Grape</option>
+<option> Infant's Tylenol Cold Decongestant & Fever Liquid</option>
+<option> Motrin Sinus Headache Non Drowsy Caplets</option>
+<option> Simply Stuffy Cherry Berry Liquid</option>
+<option> Tylenol Flu Maximum Strength Day Gelcaps</option>
+<option> TheraFLu Flu & Congestion Natural Citrus</option>
+<option> TheraFLu Flu & Congestion Natural Cherry</option>
+<option> TheraFLu Flu & Congestion Natural Apple Cinnamon</option>
+<option> TheraFLu Cold & Flu Caplets</option>
+<option> Dulcolax Laxative Liquid Gels</option>
+<option> Mylanta Gelcaps</option>
+<option> Mylanta Liquid</option>
+<option> Mylanta Extra Strength Liquid</option>
+<option> GasAid Anti-gas Softgels</option>
+<option> Pepcid AC Gelcaps</option>
+<option> Pepcid Complete Chewable Tablet Berry</option>
+<option> Gas-X Softgels</option>
+<option> Gas-X Extra Strength Softgels</option>
+<option> Maalox Soft Chews</option>
+<option> Tums Assorted Fruit</option>
+<option> Tums E-X Assorted Flavors</option>
+<option> Tums E-X Assorted Fresh Blend Flavors</option>
+<option> Tums E-X Berries</option>
+<option> Tums E-X Tropical</option>
+<option> Amoxicillin</option>
+<option> Nizatidine</option>
+<option> Diltiazem</option>
+<option> Synthetic Conjugated Estrogens</option>
+<option> Prochlorperazine</option>
+<option> Warfarin Sodium</option>
+<option> Divalproex Sodium</option>
+<option> Dextroampetamine</option>
+<option> Fluconazole</option>
+<option> Doxepin</option>
+<option> Lithium Carbonate</option>
+<option> Doxepin</option>
+<option> Morphine Sulphate</option>
+</select>
+
+<label for="cosmetics">Cosmetics:</label>
+<select name="cosmetics" id="cosmetics">
+<option value="blank"></option>
+<option> Taliah Waajid Total Body Black Earth Shampoo</option>
+<option> La Looks 3-1 Body Wash</option>
+<option> Crayola Hand & Body Foam Soap</option>
+<option> Crayola Body Wash Cotton Candy Scented</option>
+<option> Modesa Moisturizing Body Wash Cherry Blossom Scented</option>
+<option> Perlier Honey + Vanilla Bath & Shower Cream</option>
+<option> Irish Spring Charcoal Fresh for Men Body Wash</option>
+<option> Irish Spring Pure Fresh Body Wash</option>
+<option> 719 Walnut Avenue Moisturizing Body Wash Island Coconut</option>
+<option> Perfect Purity Deep Moisturizing Hawaiian Hibiscus Body Wash</option>
+<option> Eve St. Claire Bath Essentials Body Wash</option>
+<option> Softsoap Exfoliating Body Wash Pink Peony & Sea Salt</option>
+<option> Nivea Men Deep Clean Body Wash Rock Salts</option>
+<option> Softsoap Limited Edition Fiji Nights Body Wash</option>
+<option> Dial Omega Moisture Body Wash</option>
+<option> Me! Bath Shower Jelly Birthday Cake</option>
+<option> Mentos Flew Moisturizing Body Wash Strawberry</option>
+<option> Nivea Men Cool Body Wash Menthol + Yuzu</option>
+<option> Nicea Men Active 3-1 Body Wash</option>
+<option> Perfectly Posh Won't Back Dawn Body Wash</option>
+<option> Perfectly Posh Witchy Wash Shower Jelly</option>
+<option> OGX Extra Hydrating Radiant Glow + Argan Oil Body Wash</option>
+<option> Tree Hut Foaming Gel Wash Pumpkin Pop</option>
+<option> Nuetrogena Rainbath Rejuvenating Shower and Bath Gel</option>
+<option> Nivea Care & Illuminate Moisturizing Body Wash</option>
+<option> Nivea Refreshing Body Wash White Peach & Jasmine</option>
+<option> Softsoap Moisturizing Body Wash Winter Walk Winterberry</option>
+<option> Nivea Refreshing Body Wash Wild Berries & Hibiscus</option>
+<option> Physicians Formula Ros Take The Day away Cleanser</option>
+<option> CVS Health Refreshing Bath & Body Shower Gel</option>
+<option> Modesa Moisturizing Body Wash Coconut Ginger</option>
+<option> Equate Pink Himalayan Refreshing Body Wash</option>
+<option> 18.21 Man Made Wash Original Sweet Tobacco</option>
+<option> Perfect Purity Body Wash Bamboo Waterfall</option>
+<option> Perlier Honey + Orange Bath & Shower Cream</option>
+<option> Modesa Vanilla Honey Scented Sweet Body Wash</option>
+<option> Apline x Treme Xtreme Body Wash Canyon</option>
+<option> St. Ives Oatmeal and Shea Butter Body Wash</option>
+<option> OGX Radiant Glow + Argan Oil of Morocco Body Wash</option>
+<option> Tone Moisturizing Body Wash Petal Soft Pink Peoney</option>
+<option> B-Fresh Nourishing Body Wash</option>
+<option> Daylogic Moisturizing Body Wash Pomegranate & Mango</option>
 </main>
 
 <footer>
